# Leo_Simulation

./: README.md
src/leo_description/: CMakeLists.txt
src/leo_description/config/: arm_controller.yaml
src/leo_description/urdf/: d435.urdf.xacro  macros.xacro  mycobot_280_pi.xacro  mycobot_280_pi_adaptive_gripper.urdf  mycobot_280_pi_adaptive_gripper.xacro
src/my_gazebo_worlds/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/srv/: TESTControlColorStatus.srv
src/my_robot_sim/: package.xml  setup.py
src/my_robot_sim/config/: bridge.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  navigate_to_pose_w_replanning_and_recovery.xml
src/my_robot_sim/launch/: demo1.launch.py  leo_sim_nav.launch.py  puzzle.launch.py  sim_bringup.launch.py  small.launch.py  test_close.launch.py
src/my_robot_sim/my_robot_sim/: __init__.py  test_arm_movement.py
src/my_robot_sim/rviz/: sim.rviz
src/my_robot_sim/urdf/: my_robot.urdf
src/my_robot_sim/worlds/: box.STL  demo1.sdf  demo2.sdf  demo3.sdf  demo4.sdf  demo5.sdf  puzzle.sdf  simple.sdf  simple_room.sdf  small.sdf  testing_world.sdf
src/mycobot_control/: CMakeLists.txt  package.xml
src/mycobot_control/launch/: arm_node.launch.py
src/mycobot_control/src/: arm_moveit_node.cpp
src/mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  leo_sim.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/robot_control_system/: setup.py
(+25 files in other folders)
